part-5/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    kubernetes.courselabs.co: hackathon
    app: widgetario
spec:
  replicas: 3
  selector:
    matchLabels:
        app: widgetario
        component: web
  template:
    metadata:
      labels: 
        app: widgetario
        component: web
        hackathon: part-1
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 65534
        runAsGroup: 3000
      containers:
        - name: app
          image: widgetario/web:21.03
          ports:
            - containerPort: 5001
              name: http
          volumeMounts:
            - name: api-config
              mountPath: "/app/secrets"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 20
            initialDelaySeconds: 20
          resources:
            limits:
              cpu: 200m
              memory: 150Mi 
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
      volumes:
        - name: api-config
          secret:
            secretName: web-api
