part-5/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: widgetario-local
  labels:
    kubernetes.courselabs.co: hackathon
spec:
  rules:
  - host: widgetario.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: widgetario-web-internal
            port: 
              name: http
